<resources>
    <string name="app_name">SmartcareAPA</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="label_username">Username</string>
    <string name="label_next">Suivant</string>
    <string name="label_previous">Retour</string>
    <string name="label_yes">Oui</string>
    <string name="label_lets_go">"C'est parti !"</string>
    <string name="label_no">Non</string>
    <string name="label_welcome">Bienvenue !</string>
    <string name="label_first_question">
        "Hey &lt;username&gt; !\n\n Es-tu prêt à prendre soin de toi aujourd'hui ?"
    </string>
    <string name="label_first_question_short">"Es-tu prêt à prendre soin de toi aujourd'hui ?"</string>
    <string name="label_wonderful">Génial !</string>
    <string name="label_answer_activity">Vous avez répondu %s !</string>
    <string name="label_waiting_for_answer">"En attente d'une réponse&#8230;"</string>
    <string name="label_apa_proposal">"Excellent !\nVoici l'APA que nous vous avons choisi."</string>
    <string name="label_about_APA">
        "Des études ont prouvé que la pratique d'une activité physique adaptée (APA) permet de <b>lutter plus efficacement</b> contre le cancer.\n\n<b>SmartCare APA</b> vous permet de réaliser des APA adaptées à vos besoins et à vos capacités pour mettre toutes les chances de votre coté et <b>vous encourager au quotidien, en toute simplicité.</b>"
    </string>
    <string name="question_why_denial">Des raisons particulières ?</string>
    <string name="denial_because_pain">"J'ai mal quelque part"</string>
    <string name="denial_because_fatigue">"Je suis trop fatigué"</string>
    <string name="denial_because_motivation">"Je n'ai pas le moral"</string>
    <string name="denial_because_time">"Je n'ai pas le temps"</string>
    <string name="denial_because_other">Autre</string>
    <string name="label_return">Retour</string>
    <string name="label_confirm">Valider</string>
    <string name="label_login_instruction">Bienvenue !\n\nVeuillez entrer vos identifiants Withings afin de vous connecter&#8230;</string>
    <string name="label_finished_apa">"J'ai terminé !"</string>
    <string name="label_questionnaire_post_apa">"Bravo pour vos efforts !\n\nCe questionnaire nous aidera à adapter vos séances :"</string>
    <string name="question_number_exercises">"Combien d'exercices avez-vous réalisés ?"</string>
    <string name="question_difficulty">"Sur une échelle de 0 à 10, quelle était la difficulté de la séance ?"</string>
    <string name="question_pain">"Sur une échelle de 0 à 10, avez-vous ressenti des douleurs/gênes ?"</string>
    <string name="label_icon_new_username">icon for modify action</string>
    <string name="notif_channel_name">APA Notification Channel</string>
    <string name="notif_channel_id">APA Notif Channel ID</string>
    <string name="notif_content_text">"C'est l'heure de l'APA !"</string>
    <string name="message1">"La pratique d’une activité physique régulière améliore votre qualité d’endurance pour vous permettre de vous déplacer à pied et monter des escaliers. Source : INSERM"</string>
    <string name="message2">"La pratique d’une activité physique régulière réduit la fatigue et améliore votre qualité de vie. Source : American Cancer Society"</string>
    <string name="message3">"La pratique d’une activité physique régulière vous aide à gérer les effets secondaires du traitement et favorise la récupération. Source : Cancer Research UK"</string>
    <string name="message4">"La pratique d’une activité physique régulière contribue à réduire le stress et l'anxiété associés au traitement. Source : European Journal of Cancer Care"</string>
    <string name="message5">"La pratique d'une activité physique régulière améliore votre santé mentale et votre bien-être global. Source : Supportive Care in Cancer"</string>
    <string name="message6">"La pratique d’une activité physique régulière permet d’augmenter votre masse musculaire, de diminuer votre poids corporel et votre masse grasse. Source : INSERM"</string>
</resources>