<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleWhite"
    tools:context=".QuestionnairePostApaActivity">

    <TextView
        android:id="@+id/textViewQuestionnairePostApa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/label_questionnaire_post_apa"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNumberExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number_exercises"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBarNumberExercises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionnairePostApa"
        app:layout_constraintVertical_chainStyle="packed" />

    <RatingBar
        android:id="@+id/ratingBarNumberExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="6"
        app:layout_constraintBottom_toTopOf="@+id/textViewDifficultyRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumberExercises" />

    <TextView
        android:id="@+id/textViewDifficultyRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/question_difficulty"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarNumberExercises" />

    <SeekBar
        android:id="@+id/seekBarDifficulty"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue1"
        android:max="10"
        android:min="0"
        android:progress="0"
        android:progressBackgroundTint="@color/orange1"
        app:layout_constraintBottom_toTopOf="@+id/textViewProgressDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDifficultyRating" />

    <TextView
        android:id="@+id/textViewPainRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/question_pain"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarPain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProgressDifficulty" />

    <SeekBar
        android:id="@+id/seekBarPain"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue1"
        android:max="10"
        android:min="0"
        android:progress="0"
        android:progressBackgroundTint="@color/orange1"
        app:layout_constraintBottom_toTopOf="@+id/textViewProgressPain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPainRating" />

    <Button
        android:id="@+id/buttonConfirmQuestionnairePostApa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/label_confirm"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewProgressDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="./10"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPainRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarDifficulty" />

    <TextView
        android:id="@+id/textViewProgressPain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="./10"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirmQuestionnairePostApa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPain" />

</androidx.constraintlayout.widget.ConstraintLayout>