<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleWhite"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context=".AnswerYesActivity">

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_apa_proposal"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollViewApa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewApa"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackApa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntro"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewApa1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="APA"
                android:scrollbars="vertical"
                app:srcCompat="@drawable/logo_smartcareapa"
                tools:layout_editor_absoluteY="648dp" />

            <ImageView
                android:id="@+id/imageViewApa2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="APA"
                android:scrollbars="vertical"
                app:srcCompat="@drawable/logo_smartcareapa"
                tools:layout_editor_absoluteY="648dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/buttonBackApa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue2"
        android:text="@string/label_previous"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonFinishedApa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollViewApa"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonFinishedApa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue1"
        android:text="@string/label_finished_apa"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/buttonBackApa"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollViewApa"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>