<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleWhite"
    tools:context=".ProfileActivity">


    <TextView
        android:id="@+id/textViewUsernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="131dp"
        android:hint="Username"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextModifyUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUsernameProfile"
        tools:layout_editor_absoluteY="209dp" />



    <ImageButton
        android:id="@+id/imageButtonModifyUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="249dp"
        android:backgroundTint="@color/orange1"
        android:contentDescription="@string/label_icon_new_username"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUsernameProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUsernameProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonConfirmNewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/label_confirm"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextModifyUsername"
        app:layout_constraintTop_toBottomOf="@id/imageButtonModifyUsername"
        tools:layout_editor_absoluteX="564dp"
        tools:layout_editor_absoluteY="195dp" />

    <TextView
        android:id="@+id/titleChart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vos battements de coeur"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfirmNewUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/chart1"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/titleChart1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/titleChart2"/>

    <TextView
        android:id="@+id/titleChart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vos calories"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/chart1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/chart2"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/titleChart2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonProfileToMain"/>
<!--
    <TextView
        android:id="@+id/textViewReponses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
-->

    <Button
        android:id="@+id/buttonProfileToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:text="A supprimer plus tard"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>